Minor tweaks and fixes.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <title>TuxMate - The Linux Bulk App Installer</title>
     
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="../public/tuxmate.png">
-    <link rel="apple-touch-icon" href="../public/icon-192.png">
+    <link rel="icon" type="image/png" href="public/tuxmate.png">
+    <link rel="apple-touch-icon" href="public/icon-192.png">
     
     <!-- Styles -->
     <link rel="stylesheet" href="css/styles.css">
@@ -20,7 +20,7 @@
     <header>
         <div class="header-content">
             <div class="logo-section">
-                <img src="../public/tuxmate.png" alt="TuxMate Logo" class="logo-img">
+                <img src="public/tuxmate.png" alt="TuxMate Logo" class="logo-img">
                 <div class="logo-text">
                     <h1>TuxMate</h1>
                     <p class="logo-tagline">The Linux Bulk App Installer.</p>
